@@ -10,9 +10,15 @@ boost1.37 (1.37.0-1) unstable; urgency=low
   * documention-files:
   * example-files: Update for new version.
   
-  * control, rules: Minimal updates for 1.37.
+  * control:
+  * rules: Update version variables for 1.37.  Do not build
+    single-threaded libraries.  Do not create symlinks that are decorated
+    with toolset name (i.e. "gcc43").
+  
+  * rtupdate: Test for link target existence, since we no longer build
+    single-threaded libraries.
 
- -- Steve M. Robbins <smr@debian.org>  Sun, 09 Nov 2008 00:36:19 -0600
+ -- Steve M. Robbins <smr@debian.org>  Sun, 09 Nov 2008 11:01:40 -0600
 
 boost1.36 (1.36.0-2) unstable; urgency=low
 
